<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_90"
    tools:context=".ui.people.NewPersonFragment"
    >

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textColor="@color/primaryDarkColor"
                android:fontFamily="@font/montserrat_500"
                android:text="@string/name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/nameLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                style="@style/Theme.AppTheme.OutLinedTextInput.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/nameTitle"
                app:layout_constraintBottom_toTopOf="@id/datePicker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:inputType="textCapWords"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <DatePicker
                android:id="@+id/datePicker"
                style="@style/Theme.Material3.Dark.Dialog.Alert"
                android:theme="@style/NumberPickerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintTop_toBottomOf="@id/nameLayout"
                app:layout_constraintBottom_toTopOf="@id/noteTitle"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="-12dp"
                android:textSize="14sp"
                android:textColor="@color/primaryDarkColor"
                android:fontFamily="@font/montserrat_500"
                android:text="@string/note"
                app:layout_constraintTop_toBottomOf="@id/datePicker"
                app:layout_constraintBottom_toTopOf="@id/noteEdittext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/noteEdittext"
                android:padding="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="80dp"
                android:textSize="14sp"
                android:minLines="4"
                android:singleLine="false"
                android:scrollbars="vertical"
                android:background="@drawable/note_border"
                android:autofillHints=""
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/noteTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/addPerson"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_person"
        app:strokeColor="@android:color/white"
        android:enabled="false"
        app:strokeWidth="2px"
        app:cornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>