<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_90"
    tools:context=".ui.people.details.PersonDetailsFragment"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/birthdayImg"
        style="@style/Theme.AppTheme.DetailsImg"
        android:layout_marginTop="20dp"
        android:scaleY="1.4"
        android:scaleX="1.4"
        app:srcCompat="@drawable/ic_calendar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/birthdayText"
        style="@style/Theme.AppTheme.DetailsTitle"
        android:text="@string/no_numbers"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/birthdayImg"
        app:layout_constraintStart_toEndOf="@id/birthdayImg"
        app:layout_constraintEnd_toStartOf="@id/fullYearsText"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fullYearsText"
        style="@style/Theme.AppTheme.DetailsTitle"
        app:layout_constraintBottom_toBottomOf="@id/birthdayImg"
        app:layout_constraintStart_toEndOf="@id/birthdayText"
        app:layout_constraintEnd_toStartOf="@id/isFavoriteImg"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/isFavoriteImg"
        style="@style/Theme.AppTheme.DetailsImg"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:scaleY="1.1"
        android:scaleX="1.1"
        app:srcCompat="@drawable/ic_star_border"
        app:tint="@color/gray_77"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/divider3"
        style="@style/Theme.AppTheme.DividerDetails"
        android:layout_width="match_parent"
        app:srcCompat="@drawable/divider"
        app:layout_constraintTop_toBottomOf="@id/birthdayImg"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/zodiacImg"
        style="@style/Theme.AppTheme.DetailsImg"
        android:layout_marginTop="20dp"
        android:scaleY="1.1"
        android:scaleX="1.1"
        app:srcCompat="@drawable/ic_stars"
        app:layout_constraintTop_toBottomOf="@id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/zodiacText"
        style="@style/Theme.AppTheme.DetailsTitle"
        android:text="@string/no_numbers"
        app:layout_constraintBottom_toBottomOf="@id/zodiacImg"
        app:layout_constraintStart_toEndOf="@id/zodiacImg"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/divider4"
        style="@style/Theme.AppTheme.DividerDetails"
        android:layout_width="match_parent"
        app:srcCompat="@drawable/divider"
        app:layout_constraintTop_toBottomOf="@id/zodiacImg"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/chineseYearImg"
        style="@style/Theme.AppTheme.DetailsImg"
        android:layout_marginTop="20dp"
        android:scaleY="1.1"
        android:scaleX="1.1"
        app:srcCompat="@drawable/ic_year_of_the"
        app:layout_constraintTop_toBottomOf="@id/divider4"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chineseYearText"
        style="@style/Theme.AppTheme.DetailsTitle"
        android:text="@string/no_numbers"
        app:layout_constraintBottom_toBottomOf="@id/chineseYearImg"
        app:layout_constraintStart_toEndOf="@id/chineseYearImg"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/divider5"
        style="@style/Theme.AppTheme.DividerDetails"
        android:layout_width="match_parent"
        app:srcCompat="@drawable/divider"
        app:layout_constraintTop_toBottomOf="@id/chineseYearImg"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/pythagoreanMatrixImg"
        style="@style/Theme.AppTheme.DetailsImg"
        app:srcCompat="@drawable/ic_grid"
        app:layout_constraintTop_toBottomOf="@id/divider5"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pythagoreanMatrixText"
        style="@style/Theme.AppTheme.DetailsTitle"
        android:textSize="16sp"
        android:letterSpacing="0.05"
        android:text="@string/pythagorean_matrix"
        app:layout_constraintBottom_toBottomOf="@id/pythagoreanMatrixImg"
        app:layout_constraintStart_toEndOf="@id/pythagoreanMatrixImg"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/divider1"
        style="@style/Theme.AppTheme.DividerDetails"
        android:layout_width="match_parent"
        app:srcCompat="@drawable/divider"
        app:layout_constraintTop_toBottomOf="@id/pythagoreanMatrixImg"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dateCreatedImg"
        style="@style/Theme.AppTheme.DetailsImg"
        app:srcCompat="@drawable/ic_add_date"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dateCreatedText"
        style="@style/Theme.AppTheme.DetailsTitle"
        android:text="@string/no_numbers"
        android:textSize="13sp"
        android:letterSpacing="0"
        app:layout_constraintBottom_toBottomOf="@id/dateCreatedImg"
        app:layout_constraintStart_toEndOf="@id/dateCreatedImg"
        app:layout_constraintEnd_toStartOf="@id/birthDateWasChanged"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dateCreatedHint"
        style="@style/Theme.AppTheme.DetailsTitle"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/date_created"
        android:textSize="16sp"
        android:visibility="gone"
        android:background="@drawable/background_rounded_corners"
        android:letterSpacing="0.1"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toEndOf="@id/dateCreatedImg"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/birthDateWasChanged"
        style="@style/Theme.AppTheme.DetailsTitle"
        android:textSize="13sp"
        android:text="@string/birth_was_changed"
        android:drawableEnd="@drawable/ic_alarm_on"
        android:drawableTint="@color/gray_77"
        android:gravity="bottom"
        android:letterSpacing="0"
        app:layout_constraintBottom_toBottomOf="@id/dateCreatedImg"
        app:layout_constraintStart_toEndOf="@id/dateCreatedText"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/divider6"
        style="@style/Theme.AppTheme.DividerDetails"
        android:layout_width="match_parent"
        app:srcCompat="@drawable/divider"
        app:layout_constraintTop_toBottomOf="@id/dateCreatedImg"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/noteImg"
        style="@style/Theme.AppTheme.DetailsImg"
        android:scaleY="1.1"
        android:scaleX="1.2"
        app:srcCompat="@drawable/ic_pencil"
        app:tint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/divider6"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/no_numbers"
        android:gravity="center_vertical"
        app:layout_constraintHeight_min="64dp"
        app:layout_constraintTop_toBottomOf="@id/divider6"
        app:layout_constraintStart_toEndOf="@id/noteImg"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/divider2"
        style="@style/Theme.AppTheme.DividerDetails"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        app:srcCompat="@drawable/divider"
        app:layout_constraintTop_toBottomOf="@id/noteText"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/addPicImg"
        android:layout_height="96dp"
        android:layout_width="match_parent"
        android:layout_marginTop="64dp"
        app:srcCompat="@drawable/ic_person_add"
        app:tint="@color/gray_77"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/pictureImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>